--- a/Angular/Gulin/package.json
+++ b/Angular/Gulin/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular": "^1.6.5",
+    "angular-material": "^1.1.4",
     "core-js": "^2.4.1",
+    "npm": "^5.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -26,9 +29,17 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/core-js": "^0.9.42",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.2.1",
     "codelyzer": "~3.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.16.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -37,25 +48,17 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^4.0.11",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "@types/core-js": "^0.9.42",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.1",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.16.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "null-loader": "^0.1.1",
+    "protractor": "^4.0.11",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.1",
+    "ts-node": "~3.0.4",
+    "tslint": "~5.3.2",
+    "typescript": "^2.4.2",
+    "webpack": "^3.5.1",
     "webpack-dev-server": "2.4.1",
     "webpack-merge": "^3.0.0"
   }
