add working modules routing structure

--- a/Angular/Gulin/package.json
+++ b/Angular/Gulin/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
+    "start": "webpack-dev-server --inline --progress --port 4200",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
   },
@@ -32,6 +32,7 @@
     "@types/core-js": "^0.9.42",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.1",
     "codelyzer": "~3.0.1",
@@ -51,7 +52,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
     "null-loader": "^0.1.1",
-    "protractor": "^4.0.11",
+    "protractor": "^4.0.14",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
