--- a/Angular/Gulin/package.json
+++ b/Angular/Gulin/package.json
@@ -9,12 +9,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.3",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -36,7 +38,7 @@
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.1",
     "codelyzer": "~3.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.5",
@@ -55,7 +57,7 @@
     "protractor": "^4.0.14",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "^2.4.2",
